{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "7333bd5d-5640-4f9a-9fe4-9d09f65e6dd2",
            "actions": [
                {
                    "name": "HorizontalMove",
                    "type": "PassThrough",
                    "id": "7bd492ba-3c6c-4e37-8629-8aae006b2024",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "VerticalMove",
                    "type": "PassThrough",
                    "id": "40ef36df-6b4f-4aff-b78d-f52c77fe879a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "2eafb3f7-e173-4a98-98f8-b9d05ee48ecc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraFollow",
                    "type": "Value",
                    "id": "8f7eeb24-d4c3-4334-a36f-458199a0a894",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "cd43ffc0-d6f3-4c2e-9c1d-791eb5c3a4f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Key",
                    "id": "1779a704-19eb-48d5-ad58-dcea73acb54d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "533aa4ee-8c95-495f-b97f-b73dc07e9b1c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "564af35c-0ede-488f-a7e3-ff2deefd0342",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Key",
                    "id": "dd30ca06-fbb0-498b-8d4c-ea9ae8f1f55a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "18141d4c-45dd-472c-9600-6d9010fe5ffb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "9c00e290-7a5d-45bb-b4d8-5e31860192fe",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "25f457ef-d2a0-40ee-afc3-95f65905ef45",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c26b0869-2cd4-4bc1-a90a-08d6339a0cc4",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraFollow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "393bfba3-121f-4483-8d52-6561814e6d73",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "a995fb53-bdb5-498e-ae4d-bf21def76c6f",
            "actions": [
                {
                    "name": "Z",
                    "type": "Button",
                    "id": "1b61035a-8387-4b14-9eaf-367101e0b6d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "X",
                    "type": "Button",
                    "id": "3be65d77-9dbc-4d78-8559-6a2a7464fb51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "C",
                    "type": "Button",
                    "id": "4ac79346-0731-4a92-877f-67eb903266e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a4ac6c76-dc69-4737-8e12-2d207b60721e",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Z",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9751b96c-89fe-44d9-96ba-5aca5ade208b",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96168151-4143-4235-99d1-917880d76138",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "C",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}